# surway

./: Cargo.toml  README.md  index-5ce6600c644a8077.css  index-9c7774b146d8a52.js  index-9c7774b146d8a52_bg.wasm  index.html
.github/workflows/: deploy.yml
src/: main.rs
src/styles/: index.scss
