[package]
name = "surway"
version = "0.1.0"
authors = ["pyakushin <jetpilot412@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = {version = "*", features = ["console"]}
seed = "*"
leaflet = "*"
serde = "*"
serde_derive = "*"